--- a/themes/bootstrap3/templates/RecordDriver/SolrOverdrive/hold.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/SolrOverdrive/hold.phtml
@@ -1,5 +1,5 @@
 <div class="odaction">
-  <?php if($action == "getTitle"): ?>
+  <?php if($action == 'getTitle'): ?>
     <h2><?=$this->transEsc($actionTitleCode); ?>
         <span class="odbrand pull-left">
           <img class="media-left" src="https://developerportaldev.blob.core.windows.net/media/Default/images/newLogos/OverDrive_Logo_28x28_rgb.jpg">
@@ -46,29 +46,29 @@
 
             <?php  if ($isMagazine): ?>
               <div class="form-group">
-                <label id="select-issue-label"><?=$this->translate("Issue") ?></label>
+                <label id="select-issue-label"><?=$this->translate('Issue') ?></label>
                 <select class="form-control" name="edition" id="select-edition" data-open="false">
 
                 <?php foreach ($issues as $key => $issue):
-                    $checkedout = $issue->checkedout?" - ".$this->transEsc("od_mag_issue_ischeckedout"):""; ?>
-                    <option value="<?=$issue->id?>"><?=$issue->edition.$checkedout?> </option>
+                    $checkedout = $issue->checkedout ? ' - ' . $this->transEsc('od_mag_issue_ischeckedout') : ''; ?>
+                    <option value="<?=$issue->id?>"><?=$issue->edition . $checkedout?> </option>
                 <?php endforeach;?>
                 </select>
             </div>
             <?php  endif;?>
 
                 <input name="doAction" value="doCheckout" type="hidden">
-                <input class="btn btn-success" name="doCheckout" value="<?=$this->transEsc("od_but_checkout_s"); ?>" type="submit">
+                <input class="btn btn-success" name="doCheckout" value="<?=$this->transEsc('od_but_checkout_s'); ?>" type="submit">
             </form>
 
-        <?php elseif ($result->code == "OD_CODE_NOMAGISSUES"): ?>
+        <?php elseif ($result->code == 'OD_CODE_NOMAGISSUES'): ?>
             <div class="alert alert-warning">
                 <div class="moreInfo">
-                    <?=$this->transEsc("od_docheckout_failure") ?>
+                    <?=$this->transEsc('od_docheckout_failure') ?>
                     <?=$result->msg?>
                 </div>
             </div>
-        <?php elseif ($result->code == "OD_CODE_ALREADY_CHECKED_OUT"): ?>
+        <?php elseif ($result->code == 'OD_CODE_ALREADY_CHECKED_OUT'): ?>
             <div class="alert alert-warning">
                 <div class="moreInfo">
                     <?=$this->transEsc('od_is_checkedout', ['%%due_date%%' => $result->data->checkout->expires]); ?>
@@ -139,67 +139,67 @@
 
         <?php endif;?>
 
-    <?php elseif ($action == "editHoldEmailConfirm"): ?>
+    <?php elseif ($action == 'editHoldEmailConfirm'): ?>
         <form class="" method="POST" name="editHoldEmail" data-lightbox-onclose="VuFind.refreshPage">
             <div class="form-group">
-                <label class="control-label"><?=$this->transEsc("Email Address"); ?></label>
+                <label class="control-label"><?=$this->transEsc('Email Address'); ?></label>
                 <input id="email" name="email" value="<?=$this->holdEmail?>" size="" class="form-control" type="text">
 
             </div>
             <div class="form-group">
                 <input name="doAction" value="editHoldEmail" type="hidden">
-                <input class="btn btn-primary" name="editHoldEmail" value="<?=$this->transEscAttr("Submit"); ?>" type="submit">
+                <input class="btn btn-primary" name="editHoldEmail" value="<?=$this->transEscAttr('Submit'); ?>" type="submit">
             </div>
         </form>
 
-    <?php elseif ($action == "editHoldConfirm"): ?>
+    <?php elseif ($action == 'editHoldConfirm'): ?>
         <form class="" method="POST" name="editHold" data-lightbox-onclose="VuFind.refreshPage">
 
             <div class="form-group">
-                <label id="select-suspension-label"><?=$this->transEsc("od_susp_hold_confirm"); ?></label>
+                <label id="select-suspension-label"><?=$this->transEsc('od_susp_hold_confirm'); ?></label>
                 <select class="form-control" name="suspendValue" id="select-suspension" data-open="false">
-                    <option value="0" selected=""><?=$this->transEsc("od_susp_asap"); ?></option>
-                    <option value="7"><?=$this->transEsc("od_susp_after",["%%days%%"=>"7"]); ?></option>
-                    <option value="14"><?=$this->transEsc("od_susp_after",["%%days%%"=>"14"]); ?></option>
-                    <option value="21"><?=$this->transEsc("od_susp_after",["%%days%%"=>"21"]); ?></option>
-                    <option value="28"><?=$this->transEsc("od_susp_after",["%%days%%"=>"28"]); ?></option>
-                    <option value="60"><?=$this->transEsc("od_susp_after",["%%days%%"=>"60"]); ?></option>
-                    <option value="90"><?=$this->transEsc("od_susp_after",["%%days%%"=>"90"]); ?></option>
-                    <option value="180"><?=$this->transEsc("od_susp_after",["%%days%%"=>"180"]); ?></option>
-                    <option value="-1"><?=$this->transEsc("od_susp_ind"); ?></option>
+                    <option value="0" selected=""><?=$this->transEsc('od_susp_asap'); ?></option>
+                    <option value="7"><?=$this->transEsc('od_susp_after', ['%%days%%' => '7']); ?></option>
+                    <option value="14"><?=$this->transEsc('od_susp_after', ['%%days%%' => '14']); ?></option>
+                    <option value="21"><?=$this->transEsc('od_susp_after', ['%%days%%' => '21']); ?></option>
+                    <option value="28"><?=$this->transEsc('od_susp_after', ['%%days%%' => '28']); ?></option>
+                    <option value="60"><?=$this->transEsc('od_susp_after', ['%%days%%' => '60']); ?></option>
+                    <option value="90"><?=$this->transEsc('od_susp_after', ['%%days%%' => '90']); ?></option>
+                    <option value="180"><?=$this->transEsc('od_susp_after', ['%%days%%' => '180']); ?></option>
+                    <option value="-1"><?=$this->transEsc('od_susp_ind'); ?></option>
                 </select>
             </div>
             <div class="form-group">
                 <input name="doAction" value="editSuspendedHold" type="hidden">
-                <input class="btn btn-primary" name="editHold" value="<?=$this->transEsc("od_but_edit_hold_conf"); ?>" type="submit">
+                <input class="btn btn-primary" name="editHold" value="<?=$this->transEsc('od_but_edit_hold_conf'); ?>" type="submit">
             </div>
         </form>
 
-    <?php elseif ($action == "suspHoldConfirm"): ?>
+    <?php elseif ($action == 'suspHoldConfirm'): ?>
 
         <form class="" method="POST" name="suspHold" data-lightbox-onclose="VuFind.refreshPage">
             <div class="form-group">
-                <label id="select-suspension-label"><?=$this->transEsc("od_susp_hold_confirm"); ?></label>
+                <label id="select-suspension-label"><?=$this->transEsc('od_susp_hold_confirm'); ?></label>
                 <select class="form-control" name="suspendValue"  id="select-suspension" data-open="false">
 
-                    <option value="7"><?=$this->transEsc("od_susp_after",["%%days%%"=>"7"]); ?></option>
-                    <option value="14"><?=$this->transEsc("od_susp_after",["%%days%%"=>"14"]); ?></option>
-                    <option value="21"><?=$this->transEsc("od_susp_after",["%%days%%"=>"21"]); ?></option>
-                    <option value="28"><?=$this->transEsc("od_susp_after",["%%days%%"=>"28"]); ?></option>
-                    <option value="60"><?=$this->transEsc("od_susp_after",["%%days%%"=>"60"]); ?></option>
-                    <option value="90"><?=$this->transEsc("od_susp_after",["%%days%%"=>"90"]); ?></option>
-                    <option value="180"><?=$this->transEsc("od_susp_after",["%%days%%"=>"180"]); ?></option>
-                    <option value="-1"><?=$this->transEsc("od_susp_ind"); ?></option>
+                    <option value="7"><?=$this->transEsc('od_susp_after', ['%%days%%' => '7']); ?></option>
+                    <option value="14"><?=$this->transEsc('od_susp_after', ['%%days%%' => '14']); ?></option>
+                    <option value="21"><?=$this->transEsc('od_susp_after', ['%%days%%' => '21']); ?></option>
+                    <option value="28"><?=$this->transEsc('od_susp_after', ['%%days%%' => '28']); ?></option>
+                    <option value="60"><?=$this->transEsc('od_susp_after', ['%%days%%' => '60']); ?></option>
+                    <option value="90"><?=$this->transEsc('od_susp_after', ['%%days%%' => '90']); ?></option>
+                    <option value="180"><?=$this->transEsc('od_susp_after', ['%%days%%' => '180']); ?></option>
+                    <option value="-1"><?=$this->transEsc('od_susp_ind'); ?></option>
                 </select>
             </div>
             <div class="form-group">
                 <input name="doAction" value="suspendHold" type="hidden">
-                <input class="btn btn-primary" name="suspendHold" value="<?=$this->transEscAttr("od_but_susp_hold"); ?>" type="submit">
+                <input class="btn btn-primary" name="suspendHold" value="<?=$this->transEscAttr('od_but_susp_hold'); ?>" type="submit">
             </div>
         </form>
 
-    <?php elseif ($action == "cancelHoldConfirm"): ?>
-	        <div class="moreInfo"><p><?=$this->transEsc("od_cancel_hold_confirm"); ?></p></div>
+    <?php elseif ($action == 'cancelHoldConfirm'): ?>
+	        <div class="moreInfo"><p><?=$this->transEsc('od_cancel_hold_confirm'); ?></p></div>
             <form class="" method="POST" name="cancelHold" data-lightbox-onclose="VuFind.refreshPage">
                 <div class="form-group">
                     <input name="doAction" value="cancelHold" type="hidden">
@@ -208,24 +208,24 @@
             </form>
 
 
-    <?php elseif ($action == "returnTitleConfirm"): ?>
+    <?php elseif ($action == 'returnTitleConfirm'): ?>
 
     <div class="returnTitleDialog">
 
         <?php  if ($isMagazine): ?>
           <h4><?=$edition?></h4>
         <?php endif;?>
-        <p><?=$this->transEsc("od_return_confirm"); ?></p>
+        <p><?=$this->transEsc('od_return_confirm'); ?></p>
         <form class="" method="POST" name="returnTitle" data-lightbox-onclose="VuFind.refreshPage">
             <input name="doAction" value="returnTitle" type="hidden">
-            <input class="btn btn-primary" name="returnTitle" value="<?=$this->transEscAttr("od_but_return"); ?>" type="submit">
+            <input class="btn btn-primary" name="returnTitle" value="<?=$this->transEscAttr('od_but_return'); ?>" type="submit">
         </form>
     </div>
 
-    <?php elseif ($action == "doCheckout"): ?>
+    <?php elseif ($action == 'doCheckout'): ?>
         <?php  if ($result->status): ?>
             <div class="alert alert-success">
-                <?=$this->transEsc("od_docheckout_success", ['%%expireDate%%' => $result->data->expires]); ?>
+                <?=$this->transEsc('od_docheckout_success', ['%%expireDate%%' => $result->data->expires]); ?>
             </div>
 
             <div class="odformats">
@@ -239,13 +239,13 @@
         <?php else: ?>
             <div class="alert alert-danger">
               <i class='fa fa-exclamation-triangle'></i>
-                <?=$this->transEsc("od_docheckout_failure"); ?>
+                <?=$this->transEsc('od_docheckout_failure'); ?>
                   <div class="moreInfo"><?=$result->msg?></div>
             </div>
 
         <?php endif;?>
             <div class="pull-right">
-                <button type="button" class="btn btn-primary" data-dismiss="modal" aria-hidden="true"><?=$this->transEsc("close"); ?></button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" aria-hidden="true"><?=$this->transEsc('close'); ?></button>
             </div>
 
     <?php else: ?>
