--- a/themes/bootstrap5/scss/variable-overrides.scss
+++ b/themes/bootstrap5/scss/variable-overrides.scss
@@ -1,5 +1,7 @@
 $nav-link-padding-y: 1rem;
 
+$navbar-nav-link-padding-x: 1rem;
+
 $primary:         #265680;
 $success:         #5cb85c;
 $info:            #5bc0de;
