--- a/themes/bootstrap5/scss/bs3-compat.scss
+++ b/themes/bootstrap5/scss/bs3-compat.scss
@@ -42,12 +42,12 @@ $screen-xs-max:          ($screen-sm-min - 1);
 $screen-sm-max:          ($screen-md-min - 1);
 $screen-md-max:          ($screen-lg-min - 1);
 
-$state-danger-text: var(--bs-danger) !default;
-$state-danger-bg: var(--bs-danger-bg-subtle) !default;
-$state-success-text: var(--bs-success) !default;
-$state-success-bg: var(--bs-success-bg-subtle) !default;
-$state-warning-text: var(--bs-warning) !default;
-$state-warning-bg: var(--bs-warning-bg-subtle) !default;
+$state-danger-text: var(--#{$prefix}danger) !default;
+$state-danger-bg: var(--#{$prefix}danger-bg-subtle) !default;
+$state-success-text: var(--#{$prefix}success) !default;
+$state-success-bg: var(--#{$prefix}success-bg-subtle) !default;
+$state-warning-text: var(--#{$prefix}warning) !default;
+$state-warning-bg: var(--#{$prefix}warning-bg-subtle) !default;
 
 $text-color: $body-color !default;
 
@@ -85,4 +85,20 @@ $well-border:            darken($well-bg, 7%) !default;
 .navbar-collapse {
     display: flex;
     justify-content: right;
+}
+
+#modal .modal-content > .close {
+    border: 0;
+}
+
+// See .nav > li > a in bootstrap.scss
+.nav.navbar-nav button.dropdown-toggle {
+    color: var(--#{$prefix}nav-link-color);
+    padding: var(--#{$prefix}nav-link-padding-y) var(--#{$prefix}navbar-nav-link-padding-x);
+
+    &:hover,
+    &:focus {
+        color: $dropdown-bg;
+        background-color: #333;
+    }
 }
