--- a/themes/bootstrap3/scss/components/explain.scss
+++ b/themes/bootstrap3/scss/components/explain.scss
@@ -1,4 +1,4 @@
-.result-list-explain {
+.js-result-list-explain {
   max-width: 100px;
 }
 
@@ -27,8 +27,10 @@
     border-top-style: solid;
   }
 
-  .rest-value {
-    padding-left: 10px;
+  .explain-rest {
+    .percentage {
+      padding-left: 10px;
+    }
   }
 
   .exact-match {
@@ -38,9 +40,8 @@
   .inexact-match {
     color: #436c71;
   }
+
+  .unknown-match {
+    color: red;
+  }
 }
-
-
-
-
-
