bold field name

--- a/themes/bootstrap3/templates/RecordDriver/DefaultRecord/explain-line.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/DefaultRecord/explain-line.phtml
@@ -21,6 +21,6 @@
     <?php if ($fieldValue): ?>
       <span class="<?=$exactMatchClass?>">"<?=$fieldValue?>"</span>
     <?php endif; ?>
-    <?=$this->transEsc('in')?>: <?=$fieldName?><?=$fieldDescription?><?=$modifier?>
+    <?=$this->transEsc('in')?> <span class="field-name"><?=$fieldName?></span><?=$fieldDescription?><?=$modifier?>
   </td>
 </tr>
