--- a/themes/bootstrap5/scss/bootstrap.scss
+++ b/themes/bootstrap5/scss/bootstrap.scss
@@ -42,6 +42,7 @@ $fa-font-path: "../../bootstrap5/css/fonts";
 @import "../../../vendor/twbs/bootstrap/scss/badge";
 @import "../../../vendor/twbs/bootstrap/scss/breadcrumb";
 @import "../../../vendor/twbs/bootstrap/scss/pagination";
+@import "../../../vendor/twbs/bootstrap/scss/tooltip";
 
 // Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../../../vendor/twbs/bootstrap/scss/utilities/api";
