--- a/themes/bootstrap5/scss/map-overrides.scss
+++ b/themes/bootstrap5/scss/map-overrides.scss
@@ -1,5 +1,5 @@
 // Override the grid with everything one notch larger
-$grid-breakpoints: (
+/*$grid-breakpoints: (
   xs: 0,
   sm: 768px,
   md: 1024px,
@@ -11,4 +11,4 @@ $container-max-widths: (
   md: 960px,
   lg: 1140px,
   xl: 1320px
-);
+);*/
