--- a/themes/bootstrap3/less/components/sidebar.less
+++ b/themes/bootstrap3/less/components/sidebar.less
@@ -301,3 +301,15 @@ h3.facet-title {
     }
   }
 }
+
+#btn-reset-contains {
+  bottom: 0;
+  width: 2em;
+  border: none;
+  border-radius: 50%;
+  background-color: @gray-lighter;
+  margin: 0 0 0 2px;
+  padding: 2px;
+  font-size: 1em;
+  cursor: pointer;
+}
