--- a/themes/bootstrap5/scss/bs3-compat.scss
+++ b/themes/bootstrap5/scss/bs3-compat.scss
@@ -30,7 +30,8 @@ $nav-link-padding: $nav-link-padding-y !default;
 $padding-base-vertical: $btn-padding-y !default;
 
 $panel-default-border:   $primary-border-subtle !default;
-$panel-footer-bg:      #f5f5f5 !default;
+$panel-bg:               #f5f5f5 !default;
+$panel-footer-bg:        $panel-bg !default;
 
 $screen-sm:              map-get($grid-breakpoints, "sm");
 $screen-sm-min:          $screen-sm;
@@ -56,54 +57,65 @@ $well-border:            darken($well-bg, 7%) !default;
 
 // *** Styles ***
 .sr-only {
-    @extend .visually-hidden;
+  @extend .visually-hidden;
 }
 
 .btn-default {
-    @extend .btn-outline-secondary;
-    //@include button-outline-variant($text-color, $body-bg);
+  //@extend .btn-outline-secondary;
+  @include button-outline-variant($text-color, $body-bg);
+}
+.btn-primary {
+  @include button-variant($primary, $text-color, $body-bg, $body-bg, $text-color, $primary);
 }
 .btn-group {
-    display: inline-block;
+  display: inline-block;
 }
 
 .label {
-    @extend .badge;
+  @extend .badge;
 }
 .label-info {
-    @extend .text-bg-primary;
+  @extend .text-bg-primary;
 }
 
 .dropdown-toggle::after {
-    display: none;
+  display: none;
 }
 
 .searchForm {
-    .form-control, .form-select {
-        display: inline-block;
-        width: initial;
-    }
-    .btn {
-        vertical-align: baseline;
-    }
+  .form-control, .form-select {
+    display: inline-block;
+    width: initial;
+  }
+  .btn {
+    vertical-align: baseline;
+  }
 }
 
 .form-control {
-    appearance: auto;
+  appearance: auto;
 }
 
 .form-select {
-    appearance: auto;
-    padding-top: 0.525rem;
-    padding-bottom: 0.525rem;
+  appearance: auto;
+  padding-top: 0.525rem;
+  padding-bottom: 0.525rem;
+}
+
+@media (min-width: map-get($grid-breakpoints, "sm")) {
+  .form-inline .form-control {
+    display: inline-block;
+    width: auto;
+    vertical-align: middle;
+  }
 }
 
 .control-label {
-    @extend .form-label;
+  @extend .form-label;
 }
 
 .form-group {
-    @extend .mb-3;
+  @extend .mb-3;
 }
 
 .checkbox {
@@ -136,31 +148,87 @@ h6, .h6 {
   margin-bottom: ($line-height-base / 2) * 1rem;
 }
 
+.result.embedded .getFull.expanded {
+  position: relative;
+  padding: 10px 15px;
+  margin-bottom: -1px;
+  border: 1px solid #ddd;
+}
+
 .footer {
-    clear: both;
+  clear: both;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 .navbar-collapse {
-    display: flex;
-    justify-content: right;
+  display: flex;
+  justify-content: right;
 }
 
 #modal .modal-content > .close {
-    border: 0;
+  border: 0;
 }
 
 // See .nav > li > a in bootstrap.scss
 .nav.navbar-nav button.dropdown-toggle {
-    color: var(--#{$prefix}nav-link-color);
-    padding: var(--#{$prefix}nav-link-padding-y) var(--#{$prefix}navbar-nav-link-padding-x);
+  color: inherit;
+  padding: var(--#{$prefix}nav-link-padding-y) var(--#{$prefix}navbar-nav-link-padding-x);
 
-    &:hover,
-    &:focus {
-        color: $dropdown-bg;
-        background-color: #333;
-    }
+  &:hover,
+  &:focus {
+    color: $dropdown-bg;
+    background-color: #333;
+  }
+}
+
+// Responsive utilities
+.hidden-xs {
+  @extend .d-none;
+  @extend .d-sm-block;
+}
+.visible-xs {
+  @extend .d-block;
+  @extend .d-sm-none;
+}
+.hidden-sm {
+  @extend .d-sm-none;
+  @extend .d-md-block;
+}
+.visible-sm {
+  @extend .d-none;
+  @extend .d-sm-block;
+  @extend .d-md-none;
+}
+.hidden-lg {
+  @extend .d-lg-none;
+  @extend .d-xl-block;
+}
+.visible-lg {
+  @extend .d-none;
+  @extend .d-lg-block;
+  @extend .d-xl-none;
+}
+
+.hidden-print {
+  @extend .d-print-none;
+}
+
+.panel {
+  @extend .card;
+}
+.panel-heading {
+  @extend .card-body;
+  background-color: #f5f5f5;
+  padding: 10px 15px;
+}
+.panel-title {
+  @extend .card-title;
+  font-size: 16px;
+  margin: 0;
+}
+.panel-body {
+  @extend .card-body;
 }
