--- a/themes/bootstrap3/templates/Recommend/WebResults.phtml
+++ b/themes/bootstrap3/templates/Recommend/WebResults.phtml
@@ -1,10 +1,11 @@
 <?php
   $searchObject = $this->recommend->getResults();
   $results = $searchObject->getResults();
+  $heading = $this->recommend->getHeading();
 ?>
 <?php if (!empty($results)): ?>
 <div class="sidegroup">
-  <h2><?=$this->transEsc('Library Web Search')?></h2>
+  <h2><?=$this->transEsc($heading)?></h2>
 
   <ul class="similar">
     <?php foreach ($results as $driver): ?>
