--- a/themes/bootstrap5/scss/bs3-compat.scss
+++ b/themes/bootstrap5/scss/bs3-compat.scss
@@ -27,12 +27,17 @@ $list-group-border: $list-group-border-color !default;
 $nav-link-hover-bg: $gray-lighter !default;
 $nav-link-padding: $nav-link-padding-y !default;
 
+$nav-tabs-active-link-hover-color: $gray !default;
+$navbar-padding-horizontal:        floor(($grid-gutter-width / 2)) !default;
+
 $padding-base-vertical: $btn-padding-y !default;
 
 $panel-default-border:   $primary-border-subtle !default;
 $panel-bg:               #f5f5f5 !default;
 $panel-footer-bg:        $panel-bg !default;
 
+$screen-xs:              map-get($grid-breakpoints, "xs");
+$screen-xs-min:          $screen-xs;
 $screen-sm:              map-get($grid-breakpoints, "sm");
 $screen-sm-min:          $screen-sm;
 $screen-md:              map-get($grid-breakpoints, "md");
@@ -42,18 +47,34 @@ $screen-lg-min:          $screen-lg;
 $screen-xs-max:          ($screen-sm-min - 1);
 $screen-sm-max:          ($screen-md-min - 1);
 $screen-md-max:          ($screen-lg-min - 1);
+$grid-float-breakpoint:     $screen-sm-min !default;
+$grid-float-breakpoint-max: ($grid-float-breakpoint - 1) !default;
 
-$state-danger-text: var(--#{$prefix}danger) !default;
-$state-danger-bg: var(--#{$prefix}danger-bg-subtle) !default;
-$state-success-text: var(--#{$prefix}success) !default;
-$state-success-bg: var(--#{$prefix}success-bg-subtle) !default;
-$state-warning-text: var(--#{$prefix}warning) !default;
-$state-warning-bg: var(--#{$prefix}warning-bg-subtle) !default;
+$state-danger-text:              var(--#{$prefix}danger) !default;
+$state-danger-bg:                var(--#{$prefix}danger-bg-subtle) !default;
+$state-info-text:                var(--#{$prefix}info) !default;
+$state-info-bg:                  var(--#{$prefix}body-bg) !default;
+$state-success-text:             var(--#{$prefix}success) !default;
+$state-success-bg:               var(--#{$prefix}success-bg-subtle) !default;
+$state-warning-text:             var(--#{$prefix}warning) !default;
+$state-warning-bg:               var(--#{$prefix}warning-bg-subtle) !default;
+
+$alert-danger-bg:             $state-danger-bg !default;
+$alert-danger-text:           $state-danger-text !default;
+$alert-info-bg:               $state-info-bg !default;
+$alert-info-text:             $state-info-text !default;
+$alert-success-bg:            $state-success-bg !default;
+$alert-success-text:          $state-success-text !default;
+$alert-warning-bg:            $state-warning-bg !default;
+$alert-warning-text:          $state-warning-text !default;
 
 $text-color: $body-color !default;
 
+$modal-title-padding: $modal-header-padding;
+
 $well-bg:                #f5f5f5 !default;
 $well-border:            darken($well-bg, 7%) !default;
+
 
 // *** Styles ***
 .sr-only {
@@ -211,6 +232,14 @@ h6, .h6 {
   @extend .d-lg-block;
   @extend .d-xl-none;
 }
+$screen-xs-min: map-get($grid-breakpoints, "xs");
+$screen-xs-max: calc(map-get($grid-breakpoints, "sm") - 1px);
+$screen-sm-min: map-get($grid-breakpoints, "sm");
+$screen-sm-max: calc(map-get($grid-breakpoints, "md") - 1px);
+$screen-md-min: map-get($grid-breakpoints, "md");
+$screen-md-max: calc(map-get($grid-breakpoints, "lg") - 1px);
+$screen-lg-min: map-get($grid-breakpoints, "lg");
+$screen-md-max: calc(map-get($grid-breakpoints, "xl") - 1px);
 
 .hidden-print {
   @extend .d-print-none;
@@ -231,4 +260,21 @@ h6, .h6 {
 }
 .panel-body {
   @extend .card-body;
+}
+
+
+// *** Mixins ***
+@mixin opacity($opacity) {
+  opacity: $opacity;
+}
+
+@mixin label-variant($color) {
+  background-color: $color;
+
+  &[href] {
+    &:hover,
+    &:focus {
+      background-color: darken($color, 10%);
+    }
+  }
 }
