Fix LESS comment direction.

--- a/themes/bootstrap3/scss/components/cookie-consent/abstracts/light-color-scheme.scss
+++ b/themes/bootstrap3/scss/components/cookie-consent/abstracts/light-color-scheme.scss
@@ -49,7 +49,7 @@
     --cc-footer-bg: $panel-footer-bg;
     --cc-footer-color: $text-color;
     --cc-footer-border-color: $panel-default-border;
-/* #LESS>
+<#LESS */
 /* #SCSS> */
     --cc-bg: #{$modal-content-bg};
     --cc-primary-color: #{$text-color};
