Fix LESS comment direction.

--- a/themes/bootstrap3/scss/components/cookie-consent/core/base.scss
+++ b/themes/bootstrap3/scss/components/cookie-consent/core/base.scss
@@ -13,7 +13,7 @@
     --cc-link-color: $link-color;
     --cc-modal-margin: 1rem;
     --cc-z-index: $zindex-cookie-consent;
-/* #LESS>
+<#LESS */
 /* #SCSS> */
     --cc-font-family: #{$font-family-base};
     --cc-modal-border-radius: #{$border-radius-base};
