--- a/themes/bootstrap3/templates/RecordDriver/DefaultRecord/result-list-explain.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/DefaultRecord/result-list-explain.phtml
@@ -1,24 +1,27 @@
 <?php
   $link = $this->recordLinker()->getActionUrl($this->driver, 'Explain', $this->request);
 ?>
-<a target="_blank" href="<?=$this->escapeHtmlAttr($link)?>"><?=$this->transEsc('Explain')?></a>
-<br>
-<?php
-  $recordId = $this->driver->getUniqueID();
-  $score = $this->results->getScores()[$recordId] ?? false;
-  $maxScore = $this->results->getMaxScore();
-?>
-<?php if ($score && $maxScore !== null && $maxScore > 0):?>
-  <?php
-    $this->headScript()->appendFile('vendor/chart.js');
-    $this->headScript()->appendFile('explain.js');
-  ?>
-  <div class="js-result-list-explain">
-    <canvas class="bar-chart"
-            data-chart-title="<?=$this->transEsc('explain_compared', ['%%recordId%%' => $recordId])?>"
-            data-chart-data="<?=$this->escapeHtmlAttr('[["item"],["value"]]')?>"
-            data-max-score="<?=$maxScore?>"
-            data-score="<?=$score?>"
-    ></canvas>
-  </div>
-<?php endif; ?>
+<a class="result-list-explain" target="_blank" href="<?=$this->escapeHtmlAttr($link)?>">
+  <?php if ($score && $maxScore !== null && $maxScore > 0):?>
+    <?php
+      $this->headScript()->appendFile('vendor/chart.js');
+      $this->headScript()->appendFile('explain.js');
+      $recordId = $this->driver->getUniqueID();
+      $score = $this->results->getScores()[$recordId] ?? false;
+      $maxScore = $this->results->getMaxScore();
+    ?>
+    <span class="js-result-list-explain" title="<?=$this->transEscAttr('explain_result_list_chart_title', ['%%score%%' => $score])?>">
+      <canvas class="bar-chart"
+              data-chart-label="<?=$this->transEscAttr('explain_relevance_score')?>"
+              data-chart-record-score="<?=$this->transEscAttr('explain_record_score')?>"
+              data-chart-difference-score="<?=$this->transEscAttr('explain_difference_score')?>"
+              data-chart-data="<?=$this->escapeHtmlAttr('[["item"],["value"]]')?>"
+              data-max-score="<?=$maxScore?>"
+              data-score="<?=$score?>"
+      ></canvas>
+    </span>
+  <?php endif; ?>
+  <span title="<?=$this->transEscAttr('explain_result_list_hint')?>">
+    <?= $this->icon('question-circle') ?>
+  </span>
+</a>
