added options to make elements sticky

--- a/themes/bootstrap3/less/bootstrap.less
+++ b/themes/bootstrap3/less/bootstrap.less
@@ -160,6 +160,21 @@ h3 { font-size: 16px; }
 }
 
 /* ------ Layout ------ */
+.sticky {
+  position: fixed;
+  left: 0;
+}
+
+.sticky-gap-filler {
+  height: 1px;
+}
+
+.sticky {
+  .sticky-hidden {
+    display: none !important;
+  }
+}
+
 footer {
   &:extend(.container);
   padding: 1rem;
