--- a/themes/bootstrap3/templates/header.phtml
+++ b/themes/bootstrap3/templates/header.phtml
@@ -1,5 +1,5 @@
 <?php $account = $this->auth()->getManager(); ?>
-<div class="banner container navbar">
+<div class="banner container navbar <?= $this->stickyElement('navbar-banner') ?>" data-sticky-pos="1">
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#header-collapse" aria-label="<?=$this->transEscAttr('mobile_toggle_navigation_text')?>">
       <?=$this->icon('ui-menu') ?>
@@ -110,7 +110,7 @@
   <?php endif; ?>
 </div>
 <?php if ($this->layout()->searchbox !== false): ?>
-  <div class="search container navbar">
+  <div class="search container navbar <?= $this->stickyElement('navbar-search') ?>" data-sticky-pos="2">
     <div class="nav searchbox hidden-print" role="search">
       <?=$this->layout()->searchbox ?>
     </div>
