--- a/themes/bootstrap3/templates/search/home.phtml
+++ b/themes/bootstrap3/templates/search/home.phtml
@@ -14,7 +14,7 @@
   $this->layout()->breadcrumbs = false;
 ?>
 
-<div class="searchHomeContent">
+<div class="searchHomeContent <?= $this->stickyElement('home-search') ?>" data-sticky-pos="3">
   <?php $this->slot('search-home-hero')->start() ?>
     <?=$this->context($this)->renderInContext('search/searchbox.phtml', ['ignoreHiddenFilterMemory' => true])?>
     <?=$this->inlineScript(\Laminas\View\Helper\HeadScript::SCRIPT, '$("#searchForm_lookfor").focus();', 'SET'); ?>
