Fix hierarchical facet expand/collapse buttons with mobile Safari.

--- a/themes/bootstrap3/less/components/sidebar.less
+++ b/themes/bootstrap3/less/components/sidebar.less
@@ -217,6 +217,7 @@ h3.facet-title {
       border: 0;
       background: none;
       max-width: 1.5em;
+      padding: 0;
 
       &:hover {
         background-color: @list-group-hover-bg;
