--- a/themes/bootstrap3/scss/components/search.scss
+++ b/themes/bootstrap3/scss/components/search.scss
@@ -37,8 +37,7 @@ $thumbnail-width-large:  160px;
 
   .facet-tree__toggle-expanded {
     line-height: inherit;
-    padding-top: 0;
-    padding-bottom: 0;
+    padding: 0;
   }
 
   .facet {
