--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -37,8 +37,7 @@
 
   .facet-tree__toggle-expanded {
     line-height: inherit;
-    padding-top: 0;
-    padding-bottom: 0;
+    padding: 0;
   }
 
   .facet {
